# ai-ml-gpu-bench

./: .gitattributes  .gitignore  LICENSE  README.md  ai_bench_suite.yaml  ai_ml_bench_diagram.mermaid  bench_results_analysis.ipynb  bench_results_analysis_altair.html  bench_results_analysis_altair.ipynb  public.pem  pyproject.toml  run_suite.py
benches/: bench_utils.py  encrypt_upload.py  ollama_bench.py  xgb_bench.py
results/: ollama.csv  ollama_reference.csv  xgb.csv  xgb_reference.csv
