[project]
name = "ai-ml-gpu-bench"
version = "0.1.0"
description = "A suite to benchmark CPU/GPU Python performance in training ML models and running local LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cupy-cuda12x>=13.5.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "tabulate>=0.9.0",
    "xgboost>=3.0.2",
]
