[project]
name = "ai-ml-gpu-bench"
version = "0.1.0"
description = "A suite to benchmark CPU/GPU Python performance in training ML models and running local LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "cryptography>=45.0.5",
    "cupy-cuda12x>=13.5.1",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]
